# me134

basic134/: package.xml  setup.cfg  setup.py
basic134/basic134/: demo134.py
basic134/launch/: runexample.launch.py  viewexample.launch.py
basic134/meshes/: basiclink.dae  basiclink.stl
basic134/rviz/: viewurdf.rviz
basic134/urdf/: example.urdf
demo134/: package.xml  setup.cfg  setup.py
demo134/demo134/: demo134.py
demo134/launch/: demo134.launch.py
detectors/: package.xml  setup.cfg  setup.py
detectors/detectors/: balldetector.py  depthincenter.py  detectaruco.py  facedetector.py  keyboarddetector.py  localizearuco.py  writearuco.py
detectors/launch/: balldetector.launch.py  detectaruco.launch.py  facedetector.launch.py  keyboarddetector.launch.py  localizearuco.launch.py  realsense_aligned.launch.py  realsense_plain.launch.py  realsense_pointcloud.launch.py  start_usbcam.launch.py  view_usbcam_imageview.launch.py  view_usbcam_rviz.launch.py  view_usbcam_showimage.launch.py
detectors/rviz/: viewpointcloud.rviz  viewurdfandimage.rviz
hebiros/: package.xml  setup.cfg  setup.py
hebiros/hebiros/: hebinode.py  hebiscan.py  hebitune.py  testsend.py
hebiros/launch/: hebitest.launch.py
hebiros/params/: hebitest.yaml
hwsols/: package.xml  setup.cfg  setup.py
hwsols/hwsols/: GeneratorNode.py  KinematicChain.py  KinematicChainGravity.py  Segments.py  TransformHelpers.py  hw3p3sol.py  hw3p4sol.py  (+10 more)
me134_interfaces/: CMakeLists.txt  package.xml
pianoman/: package.xml  setup.cfg  setup.py
pianoman_description/: CMakeLists.txt  package.xml
(+99 files in other folders)
